--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,11 @@
     <string name="receiptinfo_name">Name</string>
     <string name="receiptinfo_total">Total</string>
     <string name="receiptinfo_submit">Submit</string>
+    <string name="btn_datepicker">Choose a Date</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="action_favorite">Favorite</string>
+    <string name="action_settings">Settings</string>
+    <string name="action_choosedate">View Month</string>
 </resources>
